--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: Verdana;
+	font-family: sans-serif;
 	text-decoration: none;
 	line-height: 200%;
 }
